# super-mario-wasm

./: .gitignore  CMakeLists.txt  CNAME  DEPLOYMENT.md  README.md  build-web.sh  build.sh  create_audio.py  create_simple_assets.py  index.html  shell.html  super_mario.html  super_mario.js  super_mario.wasm
.claude/agents/: cpp-wasm-game-dev.md
.github/workflows/: deploy.yml
assets/: LICENSES.md
assets/levels/: world1_level1.json
build-web/build-web/: game.data  game.html  game.js  game.wasm
build-web/src/core/: Version.h
include/: game.h  level.h  mario.h  physics.h
src/: game.cpp  level.cpp  main.cpp  mario.cpp  physics.cpp
src/core/: AudioManager.cpp  AudioManager.h  Constants.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h  SaveManager.cpp  SaveManager.h  Types.cpp  Types.h  Version.h.in
src/data/: ConfigLoader.cpp  ConfigLoader.h  LevelLoader.cpp  LevelLoader.h
src/engine/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  SpriteSheet.cpp  SpriteSheet.h
src/game/: Game.cpp  Game.h  Level.cpp  Level.h  Player.cpp  Player.h
src/physics/: CollisionDetector.cpp  CollisionDetector.h  PhysicsWorld.cpp  PhysicsWorld.h
src/ui/: HUD.cpp  HUD.h  Menu.cpp  Menu.h  UI.cpp  UI.h
web/: index.html  loader.js  manifest.json  shell.html
